include(CMakePrintHelpers)
cmake_minimum_required(VERSION 3.15)
project(computeStatistics)
find_package(Boost REQUIRED)
cmake_print_variables(Boost_FOUND)
cmake_print_variables(Boost_INCLUDE_DIRS)
cmake_print_variables(Boost_LIBRARY_DIRS)
include_directories(${Boost_INCLUDE_DIRS})
link_directories(${Boost_LIBRARY_DIRS})
cmake_print_variables(INCLUDE_DIRECTORIES)
cmake_print_variables(LINK_DIRECTORIES)
add_executable(computeStatistics computeStatistics.cxx)
target_link_libraries(computeStatistics libboost_program_options.so)
