include(CMakePrintHelpers)
cmake_minimum_required(VERSION 3.15)
project(computeStatistics)
find_package(Boost REQUIRED)
if(NOT Boost_FOUND)
  message(ERROR: Boost Library not found)
  return()
endif()
include_directories(${Boost_INCLUDE_DIRS})
link_directories(${Boost_LIBRARY_DIRS})
add_executable(computeStatistics computeStatistics.cxx)
target_link_libraries(computeStatistics Boost::program_options)
